[package]
name = "mpd-shuffler"
version = "0.1.0"
edition = "2021"
description = "Randomly shuffle your MPD library"
readme = "README.md"
license = "MIT"
keywords = ["mpd", "shuffle"]
homepage = "https://github.com/awused/mpd-shuffler"
repository = "https://github.com/awused/mpd-shuffler"

[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
aw-shuffle = { git = "https://github.com/awused/aw-shuffle", features = [ "rocks" ] }
clap = { version = "4.3.11", features = ["derive"] }
futures-util = { version = "0.3.28", default-features = false }
mpd_protocol = { version = "=1.0.1", features = [ "async" ] }
once_cell = "1.18.0"
regex = "1.9.1"
serde = { version = "1.0.171", default-features = false, features = [ "derive" ] }
signal-hook = { version = "0.3.15", default-features = false }
signal-hook-tokio = { version = "0.3.1", features = [ "futures-v0_3" ] }
tokio = { version = "1.29.1", features = [ "macros", "process", "rt", "sync", "time" ] }
