[package]
name = "mpd-shuffler"
version = "0.1.0"
edition = "2021"
description = "Randomly shuffle your MPD library"
readme = "README.md"
license = "MIT"
keywords = ["mpd", "shuffle"]
homepage = "https://github.com/awused/mpd-shuffler"
repository = "https://github.com/awused/mpd-shuffler"

[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
aw-shuffle = { git = "https://github.com/awused/aw-shuffle", features = [ "rocks" ] }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = { version = "0.3.30", default-features = false }
mpd_protocol = { version = "=1.0.3", features = [ "async" ] }
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.201", default-features = false, features = [ "derive" ] }
signal-hook = { version = "0.3.17", default-features = false }
signal-hook-tokio = { version = "0.3.1", features = [ "futures-v0_3" ] }
tokio = { version = "1.37.0", features = [ "macros", "process", "rt", "sync", "time" ] }
